<resources>
    <string name="app_name">StoryApp by A014B4KY2223</string>
    <string name="empty_image_warning">Image cannot be empty</string>
    <string name="no_media_selected">No media selected</string>
    <string name="camera_failed">Camera failed</string>
    <string name="session_expired">Please login again to access this feature.</string>
    <string name="permission_denied">Permission denied. Please grant the camera permission to use the camera feature.</string>
    <string name="empty_description_warning">Please create a description for the image</string>
    <string name="storyapp_logo">StoryApp Logo</string>
    <string name="detailsTitle">Details</string>
    <string name="back_button_cd">back button</string>
    <string name="picture_of_the_story_cd">picture of the story</string>
    <string name="this_story_was_presented_by">This story was presented by:</string>
    <string name="dicoding">Dicoding</string>
    <string name="story_desc">Anya adalah seorang gadis penasaran yang tinggal di desa terpencil dekat hutan misterius. Ia memiliki kemampuan magis yang tersembunyi, yaitu kemampuan untuk berkomunikasi dengan hewan. Suatu hari, hutan tempat tinggalnya diserang oleh makhluk jahat yang ingin menguasai sumber air ajaib. Hewan-hewan sahabat Anya memohon bantuannya. Dengan keberanian yang besar, Anya memutuskan untuk menghadapi makhluk jahat itu. Ia mengumpulkan semua hewan di hutan dan bersama-sama mereka menyusun rencana. Dengan bantuan siput ajaib yang bisa membuat jaring kuat, burung hantu yang bisa melihat jauh, dan rusa yang bisa berlari cepat, Anya berhasil mengalahkan makhluk jahat tersebut dan menyelamatkan hutannya.</string>
    <string name="created_at">Created at:</string>
    <string name="_01_10_2024">01/10/2024</string>
    <string name="description">Description:</string>
    <string name="log_in_to_your_account">Log in to Your Account</string>
    <string name="app_logo_for_login_page_cd">app logo for login page</string>
    <string name="welcome_back_pal">Welcome Back, Pal</string>
    <string name="log_in_again_to_join_the_fun_we_ve_missed_you">Log in again to join the fun, we\'ve missed you!</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="i_don_t_have_an_account_yet">I don\'t have an account yet ↗</string>
    <string name="open_stories">Open Stories</string>
    <string name="open_details">Open Details</string>
    <string name="open_welcome">Open Welcome</string>
    <string name="create_a_story">Create a Story</string>
    <string name="preview_of_the_uploaded_image_cd">preview of the uploaded image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_description">Add description</string>
    <string name="add_story">Add Story</string>
    <string name="create_an_account">Create an Account</string>
    <string name="app_logo_for_register_cd">app logo for register</string>
    <string name="ready_to_join_the_fun">Ready to Join the Fun?</string>
    <string name="let_s_create_an_account">Let\'s create an account and join us, you won\'t regret it!</string>
    <string name="name">name</string>
    <string name="create_account">Create Account</string>
    <string name="i_already_have_an_account">I already have an account ↗</string>
    <string name="stories">Stories</string>
    <string name="a_button_to_create_a_story">a button to create a story</string>
    <string name="a_button_to_log_out_from_the_app">a button to log out from the app</string>
    <string name="welcome">Welcome</string>
    <string name="app_logo">app logo</string>
    <string name="welcome_to_storyapp_fam">Welcome to StoryApp, Fam!</string>
    <string name="ready_to_share_your_stories">Ready to share your stories with others? Let\'s join us now, we promise it will be fun!</string>
    <string name="registerbtn">Register</string>
    <string name="log_inbtn">Log in</string>
    <string name="cardview_title">CardView Title</string>
    <string name="descriptioncard">Description</string>
    <string name="fetching_stories">Fetching stories with token: %1$s</string>
    <string name="error_fetching_stories">Error fetching stories</string>
    <string name="unknown_viewmodel_class">Unknown ViewModel class</string>
</resources>