<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:elevation="4dp"
    app:cardBackgroundColor="#005AFF"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/picture_of_the_story_cd"
            android:scaleType="centerCrop"
            android:src="@drawable/drawing" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/cardview_title"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/inter"
            android:maxLines="3"
            android:text="@string/descriptioncard"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/createdAtText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/inter"
            android:text="@string/_01_10_2024"
            android:textColor="#E4E4E4"
            android:textSize="11sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>