<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegister"
            style="@style/CustomToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_toolbar_height1"
            android:background="#F7931E">

            <TextView
                android:id="@+id/toolbar_title_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_medium"
                android:text="@string/stories"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageButton
        android:id="@+id/buttonCreate"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="#F7931E"
        android:contentDescription="@string/a_button_to_create_a_story"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarRegisterTitle"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_create_24" />

    <ImageView
        android:id="@+id/action_logout"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/a_button_to_log_out_from_the_app"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarRegisterTitle"
        app:layout_constraintEnd_toEndOf="@id/toolbarRegisterTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/toolbarRegisterTitle"
        app:layout_constraintTop_toTopOf="@+id/toolbarRegisterTitle"
        app:srcCompat="@drawable/baseline_logout_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRegisterTitle"
        tools:listitem="@layout/item_story" />

    <ProgressBar
        android:id="@+id/progressIndicator"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRegisterTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>